fixed bug 10618: Printing detailed survey statistics on Firefox broken
git-svn-id: http://svn.ilias.de/svn/ilias/branches/Release_4_3_x_branch@44283 21b2c9ec-7c21-0410-8b45-9bfb8ed2bfc5

--- a/templates/default/delos.css
+++ b/templates/default/delos.css
@@ -403,18 +403,6 @@ input[type=text].numeric
 }
 
 /* -------------------- table formatting ------------------ */
-div.ilTable {
-	display: table; 
-	width: 100%;
-}
-
-div.ilTableRow {
-	display: table-row;
-}
-
-div.ilTableCell {
-	display: table-cell;
-}
 
 div.ilCommandRow {
 	 text-align: right; 
@@ -2563,6 +2551,19 @@ div.ilTabContentInner {
 	width: 100%;
 }
 
+div.ilTabsTable {
+	display: table; 
+	width: 100%;
+}
+
+div.ilTabsTableRow {
+	display: table-row;
+}
+
+div.ilTabsTableCell {
+	display: table-cell;
+}
+
 /* left navigation area (used, e.g. for explorer trees) */
 div.ilLeftNav {
 	top:85px;
@@ -4617,3 +4618,26 @@ body.ilBodyPrint {
 		width: 100%;
 	}
 }
+
+/* print css */
+@media print {
+
+	div.ilTabContentOuter {
+		border: none;
+		box-shadow: none;
+	}
+
+	div.ilTabsTable {
+		display: block; 
+		width: auto;
+	}
+	
+	div.ilTabsTableRow {
+		display: block;
+	}
+	
+	div.ilTabsTableCell {
+		display: block;
+	}
+}
+
